--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
         </activity>
+        <activity android:name=".PaymentActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
