--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             android:name=".CreateAccountActivity"
             android:exported="false" />
         <activity
+            android:name=".ForgotPasswordActivity"
+            android:exported="true"/>
+
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
